# rs-project

./: .env.example  .gitignore  LICENSE  README.md  ema_pullback.py  pyproject.toml
src/rs_project/: __init__.py  cli.py  core.py  plotting.py
tests/: conftest.py  test_core.py
