[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-project"
version = "0.1.0"
description = "Approximate relative strength scoring and rating for stocks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "polygon-api-client>=1.13",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "yfinance>=1.3.0",
]

[project.scripts]
rs-rating = "rs_project.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
